Wed Mar 14 20:37:35 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new SILC_CF_LAG_STRICT command flag that strictly forces
	  that the command may be executed only once in (about) 2 seconds.
	  The old SILC_CF_LAG flag is same but allows command bursts up
	  to five before limiting.

	  Added the support for CF_LAG and CF_LAG_STRICT flags to the
	  server code.  Various commands now includes the CF_LAG_STRICT
	  flag to disallow any kind of miss-use of the command.

	* Fixed the silc_buffer_unformat to not to allocate any data
	  if the length of the data is zero.  It used to allocate the
	  length + 1.  Affected file lib/silcutil/silcbuffmt.c.

Wed Mar 14 16:10:30 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Changed the format of AdminConnection configuration section
	  in the server.  Added username of the admin to the format.
	  Affected files silcd/serverconfig.[ch].

	  Added silc_server_config_find_admin into silcd/serverconfig.[ch]
	  to return admin configuration data by host, username and/or
	  nickname.

Wed Mar 14 13:18:16 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Implemented WHOWAS command to the server.  Added the functions:

	  silc_server_command_whowas_parse,
	  silc_server_command_whowas_send_reply,
	  silc_server_command_whowas_from_client and
	  silc_server_command_whowas_from_server

	* Added <Client ID> argument to the WHOWAS command reply.  Updated
	  the protocol specs accordingly.

	* Implemented WHOWAS command and command_reply to the client
	  library.

	  Implemented the WHOWAS printing on the user interface.

Tue Mar 13 22:17:34 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new argument to the WHOWAS command reply, the real name.
	  It is an optional argument.  Updated the protocol specs.

	* Added SilcIDCacheDestructor callback that is registered when
	  the SilcIDCache is allocated.  The callback is called when
	  an cache entry in the ID Cache expires, or is purged from the