@@ -1,3 +1,8 @@
+Thu Mar 15 12:46:58 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Fixed fatal bug in failure packet handling.  Server ignored
+	  the failiure and thus crashed when it came.
+
 Wed Mar 14 20:37:35 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Added new SILC_CF_LAG_STRICT command flag that strictly forces
